Updated Example Notebook and gmt.sh convenience script

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {
       "image/png": {
        "width": 500
@@ -114,9 +114,9 @@
    ],
    "source": [
     "fig = gmt.Figure() # Create the figure\n",
-    "fig.basemap(**gmt_opts_split['basemap'])\n",
-    "fig.coast(**gmt_opts_split['coast'])\n",
-    "fig.plot(data = DATA_POINT, **gmt_opts_split['plot'])\n",
+    "fig.basemap(**gmt_opts['basemap'])\n",
+    "fig.coast(**gmt_opts['coast'])\n",
+    "fig.plot(data = DATA_POINT, **gmt_opts['plot'])\n",
     "fig.show()\n"
    ]
   }
